// Code generated by sqlc. DO NOT EDIT.
// versions:
//   sqlc v1.30.0

package repository

import (
	"github.com/jackc/pgx/v5/pgtype"
)

// 発火したアラートの履歴
type AlertHistory struct {
	ID          int64 `json:"id"`
	AlertRuleID int64 `json:"alert_rule_id"`
	// ルール発火時点の指標 (alert_rules の metric を非正規化保持)
	Metric string `json:"metric"`
	// ルール発火時点の演算子 (非正規化保持)
	Operator string `json:"operator"`
	// ルール発火時点の閾値 (非正規化保持)
	Threshold pgtype.Numeric `json:"threshold"`
	// 発火時の実測値
	ActualValue pgtype.Numeric `json:"actual_value"`
	// 通知送信完了フラグ
	IsNotified  bool               `json:"is_notified"`
	TriggeredAt pgtype.Timestamptz `json:"triggered_at"`
	CreatedAt   pgtype.Timestamptz `json:"created_at"`
	UpdatedAt   pgtype.Timestamptz `json:"updated_at"`
	DeletedAt   pgtype.Timestamptz `json:"deleted_at"`
}

// 異常値検知の閾値設定ルール
type AlertRule struct {
	ID       int64 `json:"id"`
	DeviceID int64 `json:"device_id"`
	// 計測指標 (temperature | humidity) — domain.Metric と対応
	Metric string `json:"metric"`
	// 比較演算子 (> | < | >= | <=) — domain.ComparisonOperator と対応
	Operator string `json:"operator"`
	// 閾値
	Threshold pgtype.Numeric     `json:"threshold"`
	IsEnabled bool               `json:"is_enabled"`
	CreatedAt pgtype.Timestamptz `json:"created_at"`
	UpdatedAt pgtype.Timestamptz `json:"updated_at"`
	DeletedAt pgtype.Timestamptz `json:"deleted_at"`
}

// ESP8266デバイス管理
type Device struct {
	ID     int64  `json:"id"`
	UserID int64  `json:"user_id"`
	Name   string `json:"name"`
	// MACアドレス (例: AA:BB:CC:DD:EE:FF)
	MacAddress         string             `json:"mac_address"`
	Location           *string            `json:"location"`
	IsActive           bool               `json:"is_active"`
	LastCommunicatedAt pgtype.Timestamptz `json:"last_communicated_at"`
	CreatedAt          pgtype.Timestamptz `json:"created_at"`
	UpdatedAt          pgtype.Timestamptz `json:"updated_at"`
	// 論理削除日時 (NULL = 有効)
	DeletedAt pgtype.Timestamptz `json:"deleted_at"`
	// 圃場所在地の地域キー (沖縄53地域・domain.Locality と対応。親市町村は Locality.Municipality() で導出)
	Locality *string `json:"locality"`
	// 栽培作物キー (domain.Crop と対応・VPD 適正帯の切替に使用。NULL=未設定で既定帯 0.3-1.5kPa)
	Crop *string `json:"crop"`
	// 定植/播種日 (GDD 積算の起点・domain.GDDModel と併用。NULL=未設定で GDD パネル非表示)
	PlantingDate pgtype.Date `json:"planting_date"`
}

// デバイスAPI用 Bearer トークン (Sanctum相当)
type DeviceToken struct {
	ID     int64 `json:"id"`
	UserID int64 `json:"user_id"`
	// トークン名 (デバイス名と合わせる運用)
	Name string `json:"name"`
	// SHA-256 ハッシュ化済トークン (平文は保存しない)
	TokenHash string `json:"token_hash"`
	// 権限一覧 (例: ["sensor:write"])
	Abilities  []byte             `json:"abilities"`
	LastUsedAt pgtype.Timestamptz `json:"last_used_at"`
	ExpiresAt  pgtype.Timestamptz `json:"expires_at"`
	CreatedAt  pgtype.Timestamptz `json:"created_at"`
	UpdatedAt  pgtype.Timestamptz `json:"updated_at"`
}

// SHT31 からの温湿度計測データ (システムの中核データ)
type SensorReading struct {
	ID       int64 `json:"id"`
	DeviceID int64 `json:"device_id"`
	// 温度 (℃) -40.00 〜 125.00
	Temperature pgtype.Numeric `json:"temperature"`
	// 湿度 (%) 0.00 〜 100.00
	Humidity pgtype.Numeric `json:"humidity"`
	// デバイス側での計測日時
	RecordedAt pgtype.Timestamptz `json:"recorded_at"`
	// サーバ受信日時 (通信遅延の計算に使用)
	CreatedAt pgtype.Timestamptz `json:"created_at"`
	UpdatedAt pgtype.Timestamptz `json:"updated_at"`
	DeletedAt pgtype.Timestamptz `json:"deleted_at"`
}

// Web UI の Session 認証データ (scs/pgxstore が管理。sqlc 対象外)
type Session struct {
	Token  string             `json:"token"`
	Data   []byte             `json:"data"`
	Expiry pgtype.Timestamptz `json:"expiry"`
}

// ユーザー (Web UI の Session 認証対象)
type User struct {
	ID    int64  `json:"id"`
	Name  string `json:"name"`
	Email string `json:"email"`
	// bcrypt または argon2 等でハッシュ化されたパスワード
	PasswordHash    string             `json:"password_hash"`
	EmailVerifiedAt pgtype.Timestamptz `json:"email_verified_at"`
	CreatedAt       pgtype.Timestamptz `json:"created_at"`
	UpdatedAt       pgtype.Timestamptz `json:"updated_at"`
}
